--- a/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Konfiguration.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Konfiguration.cshtml
@@ -16,40 +16,32 @@
     </span>
 
     <div class="float-left">
-        <button class="btn white" onclick="AddProcessor();">@Localize.Processor <i class="halflings-icon plus"></i></button>
-        <button class="btn white margin-left-5" onclick="ClearAll();">@Localize.Clear <i class="icon-remove"></i></button>
-        <button class="btn white margin-left-5 tooltips" data-original-title="@Localize.HideProcessors" data-placement="bottom" onclick="ShowHideProcessors(false);">@Localize.Hide <i class="halflings-icon eye-close"></i></button>
-        <button class="btn white margin-left-5 tooltips" data-original-title="@Localize.ShowProcessors" data-placement="bottom" onclick="ShowHideProcessors(true);">@Localize.Show <i class="halflings-icon eye-open"></i></button>
-        <a class="btn white margin-left-5" href="TestExportXml" target="_blank">@Localize.TestExportToXml</a>
+        <button class="btn white tooltips" data-original-title="@Localize.AddProcessor" data-placement="bottom" onclick="AddProcessor();"><i class="halflings-icon plus"></i></button>
+        <button class="btn white tooltips margin-left-5" data-original-title="@Localize.RemoveEverything" data-placement="bottom" onclick="ClearAll();"><i class="halflings-icon remove"></i></button>
+        <button class="btn white tooltips margin-left-5" data-original-title="@Localize.HideProcessors" data-placement="bottom" onclick="ShowHideProcessors(false);"><i class="halflings-icon eye-close"></i></button>
+        <button class="btn white tooltips margin-left-5" data-original-title="@Localize.ShowProcessors" data-placement="bottom" onclick="ShowHideProcessors(true);"><i class="halflings-icon eye-open"></i></button>
+        <a class="btn white tooltips margin-left-5" data-original-title="@Localize.TestExportToXml" data-placement="bottom" href="TestExportXml" target="_blank"><i class="halflings-icon share-alt"></i><i class="halflings-icon file"></i></a>
+        <button class="btn margin-left-20" onclick="CloseDataMappingDetails();">@Localize.Cancel</button>
+        <button class="btn green margin-left-5" onclick="SaveKonfiguration();"><i class="icon-ok"></i> @Localize.Save</button>
     </div>
 
     <div class="space5"></div>
 
-    @*<div id="DataConverterScrollContainer">*@
-        <div id="DataConverterContainer">
-            <div id="source" class="no-padding">
-                @foreach (var item in Model.MappingModel.SourceFile.Fields)
-                {
-                    <div class="w" id="@item.Id">
-                        <div class="field">@item.Bezeichnung</div>
-                        <div class="data">@item.Records[0]</div>
-                        <div class="sp"></div>
-                    </div>
-                }
-            </div>
-
-            <div id="destination">
-                @Html.Action("ShowDestinationDiv")
-            </div>
+    <div id="DataConverterContainer">
+        <div id="source" class="no-padding">
+            @foreach (var item in Model.MappingModel.SourceFile.Fields)
+            {
+                <div class="w" id="@item.Id">
+                    <div class="field">@item.Bezeichnung</div>
+                    <div class="data">@item.Records[0]</div>
+                    <div class="sp"></div>
+                </div>
+            }
         </div>
-    @*</div>*@
 
-</div>
-
-<div class="form-horizontal margin-top-10">
-    <div class="form-actions">
-        <button type="button" class="btn" onclick="CloseDataMappingDetails();">@Localize.Cancel</button>
-        <button type="button" class="btn green" onclick="SaveKonfiguration();"><i class="icon-ok"></i> @Localize.Save</button>
+        <div id="destination">
+            @Html.Action("ShowDestinationDiv")
+        </div>
     </div>
 </div>
 
@@ -99,6 +91,13 @@
         allowLoopback: false
     };
 
+    var startpointOptionsProzessor = {
+        isSource: true,
+        isTarget: false,
+        anchor: "Right",
+        allowLoopback: false
+    };
+
     var endpointOptionsProzessor = {
         isSource: false,
         isTarget: true,
@@ -131,8 +130,6 @@
             Container: $('#DataConverterContainer')
         });
 
-        jsPlumb.Defaults.Container = $('#DataConverterContainer');
-
         jsPlumb.makeSource($(".w"), startpointOptions);
         jsPlumb.makeTarget($(".ept"), endpointOptions);
         
@@ -151,10 +148,6 @@
         $('#destination').on("scroll", function () {
             refreshPlumb();
         });
-
-//        $('#DataConverterContainerScrollContainer').on("scroll", function () {
-//            refreshPlumb();
-//        });
 
         jsPlumb.bind("dblclick", function (c) {
             jsPlumb.detach(c);
@@ -209,7 +202,7 @@
         prozin.attr("id", "prozin-" + processorId);
         prozout.attr("id", "prozout-" + processorId);
 
-        jsPlumb.makeSource($("#prozout-" + processorId), startpointOptions);
+        jsPlumb.makeSource($("#prozout-" + processorId), startpointOptionsProzessor);
         jsPlumb.makeTarget($("#prozin-" + processorId), endpointOptionsProzessor);
 
         switch (type) {
@@ -224,7 +217,7 @@
                 break;
         }
 
-        jsPlumb.draggable(clone);
+        jsPlumb.draggable(newProcessor);
 
         $(newProcessor).find(".processorclose").click(function () {
             jsPlumb.remove($(this).closest(".processor"));              // Alle Verbindungen incl. Prozessorobjekt entfernen
