--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Weather/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Weather/Index.cshtml
@@ -4,40 +4,45 @@
 
 <style type="text/css">
     .wd-day {
-        width: 75px;
+        float: left;
+        font-size: 0.7em;
         display: inline-block;
-        margin: 5px 0 15px 0;
+        margin: 5px 0 15px 20px;
         text-align: center;
+    }
+    #wd-0 .wd-day {
+        margin-left: 0;
     }
 
     .day-info {
-        margin: 0 0 15px 0;
+        margin: 0 0 2px 0;
     }
     .day-info div.day {
         font-size: 1.0em;
         color: #808080!important;
     }
     .day-info div.wkday {
-        font-size: 1.5em;
+        font-size: 1.3em;
         font-weight: bold;
-        margin: 3px 0 0 0;
+        margin: 0 0 0 0;
     }
 
     .temp-info {
-        margin: 0 0 10px 0;
+        margin: 0 0 -7px 0;
     }
     .temp-info hr {
-        margin: 2px 0 2px -3px; 
+        margin: -1px 0 -3px -1px; 
     }
     .temp-info div.tlabel {
         color: #808080!important;
         display: inline-block;
-        width: 30px;
+        font-size: 0.95em;
+        width: 6px;
         text-align: left;
     }
     .temp-info div.tlabel-degree {
         display: inline-block;
-        vertical-align: 4px;
+        vertical-align: 2px;
         font-size: 1.5em;
     }
     .temp-info div.celsius {
@@ -59,9 +64,12 @@
 
 <h3 class="page-title">Weather <small>Widget</small></h3>
 
-<div id="wd-template" class="">
+<div id="wd-content" class="hide">
+</div>
+
+<div id="wd-template" class="hide">
     <div class="wd-day">
-        
+
         <div class="day-info">
             <div class="day">
             </div>
@@ -73,14 +81,14 @@
             <div class="max-info">
                 <div class="tlabel">max</div> <div class="celsius"></div><div class="tlabel-degree">°</div>
             </div>
-            <hr/>
+            <hr />
             <div class="min-info">
                 <div class="tlabel">min</div> <div class="celsius"></div><div class="tlabel-degree">°</div>
             </div>
         </div>
 
         <div class="picture">
-            <img src=""/>
+            <img src="" />
         </div>
 
     </div>
@@ -88,7 +96,7 @@
 
 
 <script type="text/javascript">
-    
+
     function FormPreparePrivate() {
         PrepareWeatherWidget("hamburg,de");
     }
@@ -109,22 +117,28 @@
                 loadingShow: false,
                 success: function (result) {
 
-                    var wd = result.data.list[0];
-                    //$("#test").html(result.data.city.name);
+                    for (var i = 0; i < result.data.list.length; i++) {  
+                        var wd = result.data.list[i];
+                        //console.log(wd);
 
-                    console.log(wd);
+                        var content = $("#wd-template").clone();
+                        content.removeClass("hide");
+                        content.attr("id", "wd-" + i);
+                        $("#wd-content").append(content);
 
-                    var minTemperature = toCelsiusTemperature(wd.main.temp_min);
-                    var maxTemperature = toCelsiusTemperature(wd.main.temp_max);
+                        var minTemperature = toCelsiusTemperature(wd.main.temp_min) - 20;
+                        var maxTemperature = toCelsiusTemperature(wd.main.temp_max) + 20;
 
-                    $(".wd-day .day-info div.day").html(wd.dateWeekday + ", 13.01.");
-                    $(".wd-day .day-info div.wkday").html("heute");
+                        $("#wd-" + i + " .wd-day .day-info div.day").html(wd.dateHeaderTop);
+                        $("#wd-" + i + " .wd-day .day-info div.wkday").html(wd.dateHeaderBottomBold);
 
-                    $(".wd-day .min-info div.celsius").html(minTemperature).parent().addClass(minTemperature <= 0 ? "leq-zero" : "");
-                    $(".wd-day .max-info div.celsius").html(maxTemperature).parent().addClass(maxTemperature <= 0 ? "leq-zero" : "");
+                        $("#wd-" + i + " .wd-day .min-info div.celsius").html(minTemperature).parent().addClass(minTemperature <= 0 ? "leq-zero" : "");
+                        $("#wd-" + i + " .wd-day .max-info div.celsius").html(maxTemperature).parent().addClass(maxTemperature <= 0 ? "leq-zero" : "");
 
-                    $(".wd-day .picture img").attr("src", imagePath + wd.weatherFirst.icon + ".png");
+                        $("#wd-" + i + " .wd-day .picture img").attr("src", imagePath + wd.weatherFirst.icon + ".png");
+                    }
 
+                    $("#wd-content").removeClass("hide");
                 }
             });
 
