--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Weather/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Weather/Partial/Common.cshtml
@@ -1,3 +1,2 @@
-﻿<style type="text/css">
-</style>
-
+﻿<script type="text/javascript" src="~/assets/plugins/select2/select2.js"></script>
+<link rel="stylesheet" type="text/css" href="~/assets/plugins/select2/select2.css" />
